test/input/invalid/assign_5.js
console.log(5 || ([]?.length ^= 5));
